Fix alignment of text in header (#11)
“visual thinker” wasn’t sharing a baseline with “Tim Bowman”. This was, of course, disastrous.

--- a/css/hellothisistim.css
+++ b/css/hellothisistim.css
@@ -128,6 +128,12 @@ header > h1 {
     font-family: 'Roboto Slab', serif;
     text-align: center;
 }
+header > h1 > span {
+    font-family: 'Old Standard TT', serif;
+    text-transform: lowercase;
+    text-align: center;
+    font-style: italic;
+}
 header > p {
     text-transform: lowercase;
     text-align: center;
@@ -490,6 +496,7 @@ header {
     float: left;
     clear: both;
     padding: 0;
+    padding-top: 98px;
 }
 header img {
     width: auto;
@@ -501,20 +508,17 @@ header img {
 header > h1 {
   margin-left: 180px;
   margin-top: 98px;
-  float: left;
   display: inline;
 }
 header > p {
   margin-left: 0.33em;
   margin-top: 98px;
-  float: left;
   display: inline;
-  text-transform: lowercase;
 }
 #contact {
     text-align: left;
     font-size: initial;
-    line-height: 1.7em;
+    line-height: 0.5em;
     margin-left: 180px;
 }
 #contact ul {
